reformatted data getters
